infrastructure/monitoring/remote-resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
